fix(bin): Remove time stamp from gc logs
Change-Id: Icca1eb2eedda1faad8fb65bab8c7cd5241f66a0b